# TEAM-PJ-DEEP

./: .gitignore  MBConv.md  README.md  compound_scaling.md  main.py  pyproject.toml
.github/: copilot-instructions.md
backend/: fastapi_main.py  fastapi_main2.py
convNext/: convNext_main.py  wd8_skin_fine_convNext.ipynb  workflow.md
data/: multilabel_classes.json  test_labels_only.json  test_multilabel.csv  train_labels_only.json  train_multilabel.csv  valid_labels_only.json  valid_multilabel.csv  민원데이터셋_test.xlsx  민원데이터셋_train.xlsx
document_forms_source/: 1차 정리.md  create_models.ipynb  create_models_data2-optuna.ipynb  create_models_data3.ipynb  document_form_dataset_guide_v3.md  document_form_dataset_guide_v3.txt  filename_change_by_foldername.ipynb  generate_train_val_test_labels_csv.ipynb  load_models_data2.ipynb  optuna.db  optuna_study_20260310_01.pkl  pdf_to_1pagepdf.ipynb  pdf_to_jpg.ipynb  pdf_to_label_folder.ipynb  readme.md  train,val,test_split.ipynb  프로젝트 정리.txt
efficiNetB4/: convNext_vs_efficiNetB4.md  efficiNetB4_main.py  wd8_fine_final.ipynb  wd_optuna.ipynb  workflow.md
fastapi/: fastapi_face.py  fastapi_main.py  fastapi_main2.py
multi_label/: multi_label_main.py  multi_lable_fastapi.py
resNet/: modelselect.md  resNet50_main.py  workflow.md
streamlit/: face_streamlit_main.py  model_efficiNetB4.py  model_tester.py  model_tester_convnext.py  streamlit_main.py  연예인분류기.py
stt/: whisper_main.py
sttout/: Leejamsample.txt
복만수/: resnet50_optuna_1000.ipynb  resnet50_optuna_4000장.ipynb  resnet50_기본_텍스트_1000.ipynb  resnet50_기본_텍스트_손글씨_4000.ipynb  데이터나누기.ipynb  (+4 more)
(+30 files in other folders)
