[project]
name = "team-pj-deep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grad-cam>=1.5.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdf2image>=1.17.0",
    "pypdf>=6.7.5",
    "scikit-learn>=1.8.0",
    "setuptools==81",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
