[project]
name = "team-pj-deep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "fastapi>=0.135.1",
    "grad-cam>=1.5.5",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "optuna>=4.7.0",
    "pandas<3",
    "pdf2image>=1.17.0",
    "plotly>=6.6.0",
    "pypdf>=6.7.5",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "setuptools==81",
    "streamlit>=1.32",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "uvicorn>=0.41.0",
]
[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
